--- a/tcp/sourcecode/2024-08-31-10001-tcpip-source.md
+++ b/tcp/sourcecode/2024-08-31-10001-tcpip-source.md
@@ -4,6 +4,8 @@
 
 - [linux内核TCP/IP源码浅析](https://blog.csdn.net/weixin_40355471/article/details/131535653)
 
+- [what is RCU](https://www.kernel.org/doc/html/next/RCU/whatisRCU.html)
+
 
 在tcp/ip协议栈中，sk_buff是一个关键的数据结构，通过其可以分别获得tcphdr、iphdr、ethhdr三个协议头：
 
@@ -280,3 +282,747 @@ struct tcphdr {
 1. 安全摘要选项(TCP Authentication Option, TCP Option)
 
     用于提供数据完整性和身份验证的功能。该选项用于对TCP报文段进行保护，防止数据篡改和未经授权的访问
+
+## 4. udphdr数据结构
+udphdr定义在中include/uapi/linux/udp.h中:
+```c
+struct udphdr {
+	__be16	source;
+	__be16	dest;
+	__be16	len;
+	__sum16	check;
+};
+```
+
+UDP（用户数据报协议）头部结构比TCP简单，由四个字段组成，每个字段长度为16位（2字节）。以下是UDP头部的结构图及其字段说明：
+```text
+ 0                   1                   2                   3
+ 0 1 2 3 4 5 6 7 8 9 0 1 2 3 4 5 6 7 8 9 0 1 2 3 4 5 6 7 8 9 0 1
++-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+
+|          Source Port          |       Destination Port        |
++-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+
+|            Length             |           Checksum            |
++-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+
+|                             Data                              |
++-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+
+```
+字段说明：
+
+1. `source`
+用于指定源端口
+
+1. `dest`
+用于指定目标端口
+
+1. `len`
+UDP数据报的总长度（包括头部和数据部分），以字节为单位
+
+1. `check`
+校验和，用于错误检测，包含头部和数据部分。
+
+## 5. 传输层socket
+传输层socket结构体定义在include/linux/net.h中，这个结构体表征BSD套接字的通用特性。
+```c
+struct socket_wq {
+	/* Note: wait MUST be first field of socket_wq */
+	wait_queue_head_t	wait;
+	struct fasync_struct	*fasync_list;
+	unsigned long		flags; /* %SOCKWQ_ASYNC_NOSPACE, etc */
+	struct rcu_head		rcu;
+} ____cacheline_aligned_in_smp;
+
+/**
+ *  struct socket - general BSD socket
+ *  @state: socket state (%SS_CONNECTED, etc)
+ *  @type: socket type (%SOCK_STREAM, etc)
+ *  @flags: socket flags (%SOCK_NOSPACE, etc)
+ *  @ops: protocol specific socket operations
+ *  @file: File back pointer for gc
+ *  @sk: internal networking protocol agnostic socket representation
+ *  @wq: wait queue for several uses
+ */
+struct socket {
+	socket_state		state;
+
+	short			type;
+
+	unsigned long		flags;
+
+	struct file		*file;
+	struct sock		*sk;
+	const struct proto_ops	*ops; /* Might change with IPV6_ADDRFORM or MPTCP. */
+
+	struct socket_wq	wq;
+};
+```
+### 5.1 socket字段说明
+
+1. `state`
+用于指示socket的状态。
+
+1. `type`
+用于指示socket的类型
+
+1. `file`
+socket套接字对应的文件指针
+
+1. `sk`
+网络层的套接字
+
+1. `ops`
+协议相关的一系列套接字操作，如下是该操作结构体定义
+    ```c
+	struct proto_ops {
+		int		family;
+		struct module	*owner;
+		int		(*release)   (struct socket *sock);
+		int		(*bind)	     (struct socket *sock,
+						struct sockaddr *myaddr,
+						int sockaddr_len);
+		int		(*connect)   (struct socket *sock,
+						struct sockaddr *vaddr,
+						int sockaddr_len, int flags);
+		int		(*socketpair)(struct socket *sock1,
+						struct socket *sock2);
+		int		(*accept)    (struct socket *sock,
+						struct socket *newsock, int flags, bool kern);
+		int		(*getname)   (struct socket *sock,
+						struct sockaddr *addr,
+						int peer);
+		__poll_t	(*poll)	     (struct file *file, struct socket *sock,
+						struct poll_table_struct *wait);
+		int		(*ioctl)     (struct socket *sock, unsigned int cmd,
+						unsigned long arg);
+		#ifdef CONFIG_COMPAT
+			int	 	(*compat_ioctl) (struct socket *sock, unsigned int cmd,
+							unsigned long arg);
+		#endif
+		int		(*gettstamp) (struct socket *sock, void __user *userstamp,
+						bool timeval, bool time32);
+		int		(*listen)    (struct socket *sock, int len);
+		int		(*shutdown)  (struct socket *sock, int flags);
+		int		(*setsockopt)(struct socket *sock, int level,
+						int optname, sockptr_t optval,
+						unsigned int optlen);
+		int		(*getsockopt)(struct socket *sock, int level,
+						int optname, char __user *optval, int __user *optlen);
+		void		(*show_fdinfo)(struct seq_file *m, struct socket *sock);
+		int		(*sendmsg)   (struct socket *sock, struct msghdr *m,
+						size_t total_len);
+		/* Notes for implementing recvmsg:
+		* ===============================
+		* msg->msg_namelen should get updated by the recvmsg handlers
+		* iff msg_name != NULL. It is by default 0 to prevent
+		* returning uninitialized memory to user space.  The recvfrom
+		* handlers can assume that msg.msg_name is either NULL or has
+		* a minimum size of sizeof(struct sockaddr_storage).
+		*/
+		int		(*recvmsg)   (struct socket *sock, struct msghdr *m,
+						size_t total_len, int flags);
+		int		(*mmap)	     (struct file *file, struct socket *sock,
+						struct vm_area_struct * vma);
+		ssize_t 	(*splice_read)(struct socket *sock,  loff_t *ppos,
+						struct pipe_inode_info *pipe, size_t len, unsigned int flags);
+		void		(*splice_eof)(struct socket *sock);
+		int		(*set_peek_off)(struct sock *sk, int val);
+		int		(*peek_len)(struct socket *sock);
+
+		/* The following functions are called internally by kernel with
+		* sock lock already held.
+		*/
+		int		(*read_sock)(struct sock *sk, read_descriptor_t *desc,
+						sk_read_actor_t recv_actor);
+		/* This is different from read_sock(), it reads an entire skb at a time. */
+		int		(*read_skb)(struct sock *sk, skb_read_actor_t recv_actor);
+		int		(*sendmsg_locked)(struct sock *sk, struct msghdr *msg,
+						size_t size);
+		int		(*set_rcvlowat)(struct sock *sk, int val);
+	};
+	```
+
+1. `wq`
+等待队列
+
+## 6. 网络层sock
+
+sock用于网络层代表sockets的结构，位于include/net/sock.h中：
+
+```c
+/**
+  *	struct sock - network layer representation of sockets
+  *	@__sk_common: shared layout with inet_timewait_sock
+  *	@sk_shutdown: mask of %SEND_SHUTDOWN and/or %RCV_SHUTDOWN
+  *	@sk_userlocks: %SO_SNDBUF and %SO_RCVBUF settings
+  *	@sk_lock:	synchronizer
+  *	@sk_kern_sock: True if sock is using kernel lock classes
+  *	@sk_rcvbuf: size of receive buffer in bytes
+  *	@sk_wq: sock wait queue and async head
+  *	@sk_rx_dst: receive input route used by early demux
+  *	@sk_rx_dst_ifindex: ifindex for @sk_rx_dst
+  *	@sk_rx_dst_cookie: cookie for @sk_rx_dst
+  *	@sk_dst_cache: destination cache
+  *	@sk_dst_pending_confirm: need to confirm neighbour
+  *	@sk_policy: flow policy
+  *	@sk_receive_queue: incoming packets
+  *	@sk_wmem_alloc: transmit queue bytes committed
+  *	@sk_tsq_flags: TCP Small Queues flags
+  *	@sk_write_queue: Packet sending queue
+  *	@sk_omem_alloc: "o" is "option" or "other"
+  *	@sk_wmem_queued: persistent queue size
+  *	@sk_forward_alloc: space allocated forward
+  *	@sk_reserved_mem: space reserved and non-reclaimable for the socket
+  *	@sk_napi_id: id of the last napi context to receive data for sk
+  *	@sk_ll_usec: usecs to busypoll when there is no data
+  *	@sk_allocation: allocation mode
+  *	@sk_pacing_rate: Pacing rate (if supported by transport/packet scheduler)
+  *	@sk_pacing_status: Pacing status (requested, handled by sch_fq)
+  *	@sk_max_pacing_rate: Maximum pacing rate (%SO_MAX_PACING_RATE)
+  *	@sk_sndbuf: size of send buffer in bytes
+  *	@__sk_flags_offset: empty field used to determine location of bitfield
+  *	@sk_padding: unused element for alignment
+  *	@sk_no_check_tx: %SO_NO_CHECK setting, set checksum in TX packets
+  *	@sk_no_check_rx: allow zero checksum in RX packets
+  *	@sk_route_caps: route capabilities (e.g. %NETIF_F_TSO)
+  *	@sk_gso_disabled: if set, NETIF_F_GSO_MASK is forbidden.
+  *	@sk_gso_type: GSO type (e.g. %SKB_GSO_TCPV4)
+  *	@sk_gso_max_size: Maximum GSO segment size to build
+  *	@sk_gso_max_segs: Maximum number of GSO segments
+  *	@sk_pacing_shift: scaling factor for TCP Small Queues
+  *	@sk_lingertime: %SO_LINGER l_linger setting
+  *	@sk_backlog: always used with the per-socket spinlock held
+  *	@sk_callback_lock: used with the callbacks in the end of this struct
+  *	@sk_error_queue: rarely used
+  *	@sk_prot_creator: sk_prot of original sock creator (see ipv6_setsockopt,
+  *			  IPV6_ADDRFORM for instance)
+  *	@sk_err: last error
+  *	@sk_err_soft: errors that don't cause failure but are the cause of a
+  *		      persistent failure not just 'timed out'
+  *	@sk_drops: raw/udp drops counter
+  *	@sk_ack_backlog: current listen backlog
+  *	@sk_max_ack_backlog: listen backlog set in listen()
+  *	@sk_uid: user id of owner
+  *	@sk_prefer_busy_poll: prefer busypolling over softirq processing
+  *	@sk_busy_poll_budget: napi processing budget when busypolling
+  *	@sk_priority: %SO_PRIORITY setting
+  *	@sk_type: socket type (%SOCK_STREAM, etc)
+  *	@sk_protocol: which protocol this socket belongs in this network family
+  *	@sk_peer_lock: lock protecting @sk_peer_pid and @sk_peer_cred
+  *	@sk_peer_pid: &struct pid for this socket's peer
+  *	@sk_peer_cred: %SO_PEERCRED setting
+  *	@sk_rcvlowat: %SO_RCVLOWAT setting
+  *	@sk_rcvtimeo: %SO_RCVTIMEO setting
+  *	@sk_sndtimeo: %SO_SNDTIMEO setting
+  *	@sk_txhash: computed flow hash for use on transmit
+  *	@sk_txrehash: enable TX hash rethink
+  *	@sk_filter: socket filtering instructions
+  *	@sk_timer: sock cleanup timer
+  *	@sk_stamp: time stamp of last packet received
+  *	@sk_stamp_seq: lock for accessing sk_stamp on 32 bit architectures only
+  *	@sk_tsflags: SO_TIMESTAMPING flags
+  *	@sk_use_task_frag: allow sk_page_frag() to use current->task_frag.
+  *			   Sockets that can be used under memory reclaim should
+  *			   set this to false.
+  *	@sk_bind_phc: SO_TIMESTAMPING bind PHC index of PTP virtual clock
+  *	              for timestamping
+  *	@sk_tskey: counter to disambiguate concurrent tstamp requests
+  *	@sk_zckey: counter to order MSG_ZEROCOPY notifications
+  *	@sk_socket: Identd and reporting IO signals
+  *	@sk_user_data: RPC layer private data. Write-protected by @sk_callback_lock.
+  *	@sk_frag: cached page frag
+  *	@sk_peek_off: current peek_offset value
+  *	@sk_send_head: front of stuff to transmit
+  *	@tcp_rtx_queue: TCP re-transmit queue [union with @sk_send_head]
+  *	@sk_security: used by security modules
+  *	@sk_mark: generic packet mark
+  *	@sk_cgrp_data: cgroup data for this cgroup
+  *	@sk_memcg: this socket's memory cgroup association
+  *	@sk_write_pending: a write to stream socket waits to start
+  *	@sk_disconnects: number of disconnect operations performed on this sock
+  *	@sk_state_change: callback to indicate change in the state of the sock
+  *	@sk_data_ready: callback to indicate there is data to be processed
+  *	@sk_write_space: callback to indicate there is bf sending space available
+  *	@sk_error_report: callback to indicate errors (e.g. %MSG_ERRQUEUE)
+  *	@sk_backlog_rcv: callback to process the backlog
+  *	@sk_validate_xmit_skb: ptr to an optional validate function
+  *	@sk_destruct: called at sock freeing time, i.e. when all refcnt == 0
+  *	@sk_reuseport_cb: reuseport group container
+  *	@sk_bpf_storage: ptr to cache and control for bpf_sk_storage
+  *	@sk_rcu: used during RCU grace period
+  *	@sk_clockid: clockid used by time-based scheduling (SO_TXTIME)
+  *	@sk_txtime_deadline_mode: set deadline mode for SO_TXTIME
+  *	@sk_txtime_report_errors: set report errors mode for SO_TXTIME
+  *	@sk_txtime_unused: unused txtime flags
+  *	@ns_tracker: tracker for netns reference
+  *	@sk_bind2_node: bind node in the bhash2 table
+  */
+struct sock {
+	/*
+	 * Now struct inet_timewait_sock also uses sock_common, so please just
+	 * don't add nothing before this first member (__sk_common) --acme
+	 */
+	struct sock_common	__sk_common;
+#define sk_node			__sk_common.skc_node
+#define sk_nulls_node		__sk_common.skc_nulls_node
+#define sk_refcnt		__sk_common.skc_refcnt
+#define sk_tx_queue_mapping	__sk_common.skc_tx_queue_mapping
+#ifdef CONFIG_SOCK_RX_QUEUE_MAPPING
+#define sk_rx_queue_mapping	__sk_common.skc_rx_queue_mapping
+#endif
+
+#define sk_dontcopy_begin	__sk_common.skc_dontcopy_begin
+#define sk_dontcopy_end		__sk_common.skc_dontcopy_end
+#define sk_hash			__sk_common.skc_hash
+#define sk_portpair		__sk_common.skc_portpair
+#define sk_num			__sk_common.skc_num
+#define sk_dport		__sk_common.skc_dport
+#define sk_addrpair		__sk_common.skc_addrpair
+#define sk_daddr		__sk_common.skc_daddr
+#define sk_rcv_saddr		__sk_common.skc_rcv_saddr
+#define sk_family		__sk_common.skc_family
+#define sk_state		__sk_common.skc_state
+#define sk_reuse		__sk_common.skc_reuse
+#define sk_reuseport		__sk_common.skc_reuseport
+#define sk_ipv6only		__sk_common.skc_ipv6only
+#define sk_net_refcnt		__sk_common.skc_net_refcnt
+#define sk_bound_dev_if		__sk_common.skc_bound_dev_if
+#define sk_bind_node		__sk_common.skc_bind_node
+#define sk_prot			__sk_common.skc_prot
+#define sk_net			__sk_common.skc_net
+#define sk_v6_daddr		__sk_common.skc_v6_daddr
+#define sk_v6_rcv_saddr	__sk_common.skc_v6_rcv_saddr
+#define sk_cookie		__sk_common.skc_cookie
+#define sk_incoming_cpu		__sk_common.skc_incoming_cpu
+#define sk_flags		__sk_common.skc_flags
+#define sk_rxhash		__sk_common.skc_rxhash
+
+	/* early demux fields */
+	struct dst_entry __rcu	*sk_rx_dst;
+	int			sk_rx_dst_ifindex;
+	u32			sk_rx_dst_cookie;
+
+	socket_lock_t		sk_lock;
+	atomic_t		sk_drops;
+	int			sk_rcvlowat;
+	struct sk_buff_head	sk_error_queue;
+	struct sk_buff_head	sk_receive_queue;
+	/*
+	 * The backlog queue is special, it is always used with
+	 * the per-socket spinlock held and requires low latency
+	 * access. Therefore we special case it's implementation.
+	 * Note : rmem_alloc is in this structure to fill a hole
+	 * on 64bit arches, not because its logically part of
+	 * backlog.
+	 */
+	struct {
+		atomic_t	rmem_alloc;
+		int		len;
+		struct sk_buff	*head;
+		struct sk_buff	*tail;
+	} sk_backlog;
+
+#define sk_rmem_alloc sk_backlog.rmem_alloc
+
+	int			sk_forward_alloc;
+	u32			sk_reserved_mem;
+#ifdef CONFIG_NET_RX_BUSY_POLL
+	unsigned int		sk_ll_usec;
+	/* ===== mostly read cache line ===== */
+	unsigned int		sk_napi_id;
+#endif
+	int			sk_rcvbuf;
+	int			sk_disconnects;
+
+	struct sk_filter __rcu	*sk_filter;
+	union {
+		struct socket_wq __rcu	*sk_wq;
+		/* private: */
+		struct socket_wq	*sk_wq_raw;
+		/* public: */
+	};
+#ifdef CONFIG_XFRM
+	struct xfrm_policy __rcu *sk_policy[2];
+#endif
+
+	struct dst_entry __rcu	*sk_dst_cache;
+	atomic_t		sk_omem_alloc;
+	int			sk_sndbuf;
+
+	/* ===== cache line for TX ===== */
+	int			sk_wmem_queued;
+	refcount_t		sk_wmem_alloc;
+	unsigned long		sk_tsq_flags;
+	union {
+		struct sk_buff	*sk_send_head;
+		struct rb_root	tcp_rtx_queue;
+	};
+	struct sk_buff_head	sk_write_queue;
+	__s32			sk_peek_off;
+	int			sk_write_pending;
+	__u32			sk_dst_pending_confirm;
+	u32			sk_pacing_status; /* see enum sk_pacing */
+	long			sk_sndtimeo;
+	struct timer_list	sk_timer;
+	__u32			sk_priority;
+	__u32			sk_mark;
+	unsigned long		sk_pacing_rate; /* bytes per second */
+	unsigned long		sk_max_pacing_rate;
+	struct page_frag	sk_frag;
+	netdev_features_t	sk_route_caps;
+	int			sk_gso_type;
+	unsigned int		sk_gso_max_size;
+	gfp_t			sk_allocation;
+	__u32			sk_txhash;
+
+	/*
+	 * Because of non atomicity rules, all
+	 * changes are protected by socket lock.
+	 */
+	u8			sk_gso_disabled : 1,
+				sk_kern_sock : 1,
+				sk_no_check_tx : 1,
+				sk_no_check_rx : 1,
+				sk_userlocks : 4;
+	u8			sk_pacing_shift;
+	u16			sk_type;
+	u16			sk_protocol;
+	u16			sk_gso_max_segs;
+	unsigned long	        sk_lingertime;
+	struct proto		*sk_prot_creator;
+	rwlock_t		sk_callback_lock;
+	int			sk_err,
+				sk_err_soft;
+	u32			sk_ack_backlog;
+	u32			sk_max_ack_backlog;
+	kuid_t			sk_uid;
+	u8			sk_txrehash;
+#ifdef CONFIG_NET_RX_BUSY_POLL
+	u8			sk_prefer_busy_poll;
+	u16			sk_busy_poll_budget;
+#endif
+	spinlock_t		sk_peer_lock;
+	int			sk_bind_phc;
+	struct pid		*sk_peer_pid;
+	const struct cred	*sk_peer_cred;
+
+	long			sk_rcvtimeo;
+	ktime_t			sk_stamp;
+#if BITS_PER_LONG==32
+	seqlock_t		sk_stamp_seq;
+#endif
+	atomic_t		sk_tskey;
+	atomic_t		sk_zckey;
+	u32			sk_tsflags;
+	u8			sk_shutdown;
+
+	u8			sk_clockid;
+	u8			sk_txtime_deadline_mode : 1,
+				sk_txtime_report_errors : 1,
+				sk_txtime_unused : 6;
+	bool			sk_use_task_frag;
+
+	struct socket		*sk_socket;
+	void			*sk_user_data;
+#ifdef CONFIG_SECURITY
+	void			*sk_security;
+#endif
+	struct sock_cgroup_data	sk_cgrp_data;
+	struct mem_cgroup	*sk_memcg;
+	void			(*sk_state_change)(struct sock *sk);
+	void			(*sk_data_ready)(struct sock *sk);
+	void			(*sk_write_space)(struct sock *sk);
+	void			(*sk_error_report)(struct sock *sk);
+	int			(*sk_backlog_rcv)(struct sock *sk,
+						  struct sk_buff *skb);
+#ifdef CONFIG_SOCK_VALIDATE_XMIT
+	struct sk_buff*		(*sk_validate_xmit_skb)(struct sock *sk,
+							struct net_device *dev,
+							struct sk_buff *skb);
+#endif
+	void                    (*sk_destruct)(struct sock *sk);
+	struct sock_reuseport __rcu	*sk_reuseport_cb;
+#ifdef CONFIG_BPF_SYSCALL
+	struct bpf_local_storage __rcu	*sk_bpf_storage;
+#endif
+	struct rcu_head		sk_rcu;
+	netns_tracker		ns_tracker;
+	struct hlist_node	sk_bind2_node;
+};
+```
+
+下面对其中的一些关键字段进行说明：
+
+### 6.1 核心字段
+
+1. `__sk_common`
+
+    网络层套接字通用结构体，目前inet_timewait_sock也位于其中。
+
+1. `sk_drops`
+
+    记录丢弃的数据包数量
+
+1. `sk_lock`
+
+    自旋锁，用户保护套接字的并发访问
+
+1. `sk_rcvlowat`
+
+    SO_RCVLOWAT标记位，用于控制何时唤醒等待数据的进程。当接收缓冲区中的数据量达到或超过这个值时，套接字将变为可读状态。
+
+	用途：
+
+	  - 当应用程序想要知道是否有足够的数据到达时，可以使用 SO_RCVLOWAT 来设置这个阈值
+
+	  - 一旦接收缓冲区中的数据量达到或超过 SO_RCVLOWAT 的值，应用程序可以通过 select, poll, 或 epoll 等 I/O 多路复用机制检测到套接字变为可读状态
+
+1. `sk_sndtimeo`
+
+    发送超时时间
+
+1. `sk_rcvtimeo`
+
+    接收超时时间
+
+1. `sk_type`
+
+    套接字的类型，例如: SOCK_STREAM、SOCK_DGRAM
+
+1. `sk_protocol`
+
+    套接字使用的协议，例如 IPPROTO_TCP、IPPROTO_UDP
+
+
+### 6.2 缓冲区相关
+
+1. `sk_rcvbuf`
+
+    接收缓冲区的大小
+
+1. `sk_sndbuf`
+
+    发送缓冲区大小
+
+1. `sk_receive_queue`
+
+    接收队列，存储从网络接收到的数据包
+
+1. `sk_error_queue`
+
+    错误队列，存储套接字的错误信息
+
+1. `sk_write_queue`
+
+    发送队列，存储等待发送的数据包
+
+1. `sk_rmem_alloc`
+
+    当前接收缓冲区中已分配的内存大小
+
+1. `sk_wmem_alloc`
+
+    当前发送缓冲区中已分配的内存大小
+
+1. `sk_forward_alloc`
+
+    预分配的内存大小，用于优化内存分配
+
+### 6.3 相关回调函数
+
+1. `sk_state_change`
+
+    状态变化回调函数
+
+1. `sk_data_ready`
+
+    数据处理回调函数
+
+1. `sk_write_space`
+
+    写空间可用回调函数
+
+1. `sk_error_report`
+
+    错误报告回调函数
+
+1. `sk_backlog_rcv`
+
+    backlog处理回调函数
+
+1. `sk_destruct`
+
+    sock释放时的回调函数
+
+## 7. sock_common数据结构
+
+sock_common是套接口在网络层的最小表示，即最基本的网络层套接字信息。位于include/net/sock.h中:
+
+```c
+/**
+ *	struct sock_common - minimal network layer representation of sockets
+ *	@skc_daddr: Foreign IPv4 addr
+ *	@skc_rcv_saddr: Bound local IPv4 addr
+ *	@skc_addrpair: 8-byte-aligned __u64 union of @skc_daddr & @skc_rcv_saddr
+ *	@skc_hash: hash value used with various protocol lookup tables
+ *	@skc_u16hashes: two u16 hash values used by UDP lookup tables
+ *	@skc_dport: placeholder for inet_dport/tw_dport
+ *	@skc_num: placeholder for inet_num/tw_num
+ *	@skc_portpair: __u32 union of @skc_dport & @skc_num
+ *	@skc_family: network address family
+ *	@skc_state: Connection state
+ *	@skc_reuse: %SO_REUSEADDR setting
+ *	@skc_reuseport: %SO_REUSEPORT setting
+ *	@skc_ipv6only: socket is IPV6 only
+ *	@skc_net_refcnt: socket is using net ref counting
+ *	@skc_bound_dev_if: bound device index if != 0
+ *	@skc_bind_node: bind hash linkage for various protocol lookup tables
+ *	@skc_portaddr_node: second hash linkage for UDP/UDP-Lite protocol
+ *	@skc_prot: protocol handlers inside a network family
+ *	@skc_net: reference to the network namespace of this socket
+ *	@skc_v6_daddr: IPV6 destination address
+ *	@skc_v6_rcv_saddr: IPV6 source address
+ *	@skc_cookie: socket's cookie value
+ *	@skc_node: main hash linkage for various protocol lookup tables
+ *	@skc_nulls_node: main hash linkage for TCP/UDP/UDP-Lite protocol
+ *	@skc_tx_queue_mapping: tx queue number for this connection
+ *	@skc_rx_queue_mapping: rx queue number for this connection
+ *	@skc_flags: place holder for sk_flags
+ *		%SO_LINGER (l_onoff), %SO_BROADCAST, %SO_KEEPALIVE,
+ *		%SO_OOBINLINE settings, %SO_TIMESTAMPING settings
+ *	@skc_listener: connection request listener socket (aka rsk_listener)
+ *		[union with @skc_flags]
+ *	@skc_tw_dr: (aka tw_dr) ptr to &struct inet_timewait_death_row
+ *		[union with @skc_flags]
+ *	@skc_incoming_cpu: record/match cpu processing incoming packets
+ *	@skc_rcv_wnd: (aka rsk_rcv_wnd) TCP receive window size (possibly scaled)
+ *		[union with @skc_incoming_cpu]
+ *	@skc_tw_rcv_nxt: (aka tw_rcv_nxt) TCP window next expected seq number
+ *		[union with @skc_incoming_cpu]
+ *	@skc_refcnt: reference count
+ *
+ *	This is the minimal network layer representation of sockets, the header
+ *	for struct sock and struct inet_timewait_sock.
+ */
+struct sock_common {
+	union {
+		__addrpair	skc_addrpair;
+		struct {
+			__be32	skc_daddr;
+			__be32	skc_rcv_saddr;
+		};
+	};
+	union  {
+		unsigned int	skc_hash;
+		__u16		skc_u16hashes[2];
+	};
+	/* skc_dport && skc_num must be grouped as well */
+	union {
+		__portpair	skc_portpair;
+		struct {
+			__be16	skc_dport;
+			__u16	skc_num;
+		};
+	};
+
+	unsigned short		skc_family;
+	volatile unsigned char	skc_state;
+	unsigned char		skc_reuse:4;
+	unsigned char		skc_reuseport:1;
+	unsigned char		skc_ipv6only:1;
+	unsigned char		skc_net_refcnt:1;
+	int			skc_bound_dev_if;
+	union {
+		struct hlist_node	skc_bind_node;
+		struct hlist_node	skc_portaddr_node;
+	};
+	struct proto		*skc_prot;
+	possible_net_t		skc_net;
+
+#if IS_ENABLED(CONFIG_IPV6)
+	struct in6_addr		skc_v6_daddr;
+	struct in6_addr		skc_v6_rcv_saddr;
+#endif
+
+	atomic64_t		skc_cookie;
+
+	/* following fields are padding to force
+	 * offset(struct sock, sk_refcnt) == 128 on 64bit arches
+	 * assuming IPV6 is enabled. We use this padding differently
+	 * for different kind of 'sockets'
+	 */
+	union {
+		unsigned long	skc_flags;
+		struct sock	*skc_listener; /* request_sock */
+		struct inet_timewait_death_row *skc_tw_dr; /* inet_timewait_sock */
+	};
+	/*
+	 * fields between dontcopy_begin/dontcopy_end
+	 * are not copied in sock_copy()
+	 */
+	/* private: */
+	int			skc_dontcopy_begin[0];
+	/* public: */
+	union {
+		struct hlist_node	skc_node;
+		struct hlist_nulls_node skc_nulls_node;
+	};
+	unsigned short		skc_tx_queue_mapping;
+#ifdef CONFIG_SOCK_RX_QUEUE_MAPPING
+	unsigned short		skc_rx_queue_mapping;
+#endif
+	union {
+		int		skc_incoming_cpu;
+		u32		skc_rcv_wnd;
+		u32		skc_tw_rcv_nxt; /* struct tcp_timewait_sock  */
+	};
+
+	refcount_t		skc_refcnt;
+	/* private: */
+	int                     skc_dontcopy_end[0];
+	union {
+		u32		skc_rxhash;
+		u32		skc_window_clamp;
+		u32		skc_tw_snd_nxt; /* struct tcp_timewait_sock */
+	};
+	/* public: */
+};
+```
+关键字段解析：
+
+1. `skc_daddr`
+
+    外部目的IPv4地址
+
+1. `skc_rcv_saddr`
+
+    本地所绑定的IPv4地址
+
+1. `skc_dport`
+
+    inet_dport/tw_dport 占位符
+
+1. `skc_num`
+
+	inet_num/tw_num占位符
+
+1. `skc_family`
+
+    套接字地址族，例如AF_INET、AF_INET6
+
+1. `skc_reuse`
+
+    SO_REUSEADDR设置标志位
+
+1. `skc_reuseport`
+
+    SO_REUSEPORT设置标志位
+
+1. `skc_state`
+
+    套接字连接状态，例如TCP_ESTABLISHED、TCP_CLOSE 等
+
+1. `skc_prot`
+
+    指向协议特定的操作函数表
+
+
+    
